fix mac bullet spacing

--- a/crs201/company_site/assets/styles/style.css
+++ b/crs201/company_site/assets/styles/style.css
@@ -85,6 +85,7 @@ h2::before,
 h2::after {
   display: inline-block;
   content: " \2022\ ";
+  margin-top: -1px; /* mac */
   margin-bottom: 5px;
   vertical-align: middle;
   font-size: 1.1rem;
@@ -105,7 +106,8 @@ h3 {
 }
 
 figcaption > h3 {
-  margin-top: 15px;
+  /*margin-top: 15px;*/
+  margin-top: 13px; /* mac */
 }
 
 figure {
@@ -125,7 +127,7 @@ article:nth-of-type(0n + 3) {
 
 .portrait figcaption {
   /*margin-top: 16px;*/
-  margin-top: 13px;
+  margin-top: 13px; /* mac */
 }
 
 .portrait a {
